@@ -353,6 +353,11 @@ works on a real ST should work also in Hatari</b>.</p>
       <td>Buggy samples replay during the intro, requires Hatari &gt;= 1.7</td>
     </tr>
     <tr>
+      <td>The Sentinel</td>
+      <td>1.7</td>
+      <td>Mouse moved too slowly before Hatari 1.7</td>
+    </tr>
+    <tr>
       <td>Toki</td>
       <td>before 1.0</td>
       <td>&nbsp;</td>
@@ -845,10 +850,8 @@ configuration or data files are not writable.</p>
     </tr>
     <tr>
       <td>Spectrum 512</td>
-      <td>before 1.0</td>
-      <td>Uses non-standard mouse event scaling factor.
-          Mouse cannot traverse whole Hatari window unless
-          mouse grab or fullscreen mode is used</td>
+      <td>1.7</td>
+      <td>Mouse moved too slowly before Hatari 1.7</td>
     </tr>
     <tr>
       <td>Speed Of Light</td>
